deploy/k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oto
  labels:
    app.kubernetes.io/name: oto
    app.kubernetes.io/part-of: oto
